# Senior-Design-Project

./: README.md
src/aims_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/aims_controller/aims_controller/: controller_node.py  cv_node.py  grid_to_joint_angles.json  grid_to_joint_can.json  joystick_node.py
src/aims_controller/config/: background_cam_params.yaml  robot_cam_params.yaml
src/aims_controller/launch/: aims_launch.py  background_cam_launch.py  robot_cam_launch.py
src/rqt_aims/: CMakeLists.txt  package.xml  plugin.xml  setup.cfg  setup.py
src/rqt_aims/resource/: AIMS_2.ui
src/rqt_aims/rqt_aims/: aims.py  send_g_code.py
