<package format="3">
  <name>aims_controller</name>
  <version>1.2.0</version>
  <description>The AIMS Controller that starts different ROS nodes.</description>
  <maintainer email="hutzuonline@yahoo.com">Ian Hunt</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>